Issues: Padding/Margin of the footer
Took out the border around the <footer><div> and <footer><nav>. Both
fonts are not aligned up.

--- a/css/style.css
+++ b/css/style.css
@@ -174,14 +174,11 @@ footer div#copyright {
   width: 50%;
   float: left;
   padding: 20px;
-  border: 1px solid white;
-
 }
 
 footer nav {
   width: 50%;
   float: right;
-  border: 1px solid white;
 }
 
 footer nav ul li {
